--- a/src/Components/Categories/categories.scss
+++ b/src/Components/Categories/categories.scss
@@ -31,7 +31,7 @@
     font-weight: 800;
     font-size: 40px;
     line-height: 54px;
-    color: var(--pureWhite);
+    color: $pureWhite;
     background-repeat: no-repeat;
 }
 
@@ -72,7 +72,7 @@
     font-weight: 600;
     font-size: 20px;
     line-height: 27px;
-    color: var(--pureWhite);
+    color: $pureWhite;
     text-decoration: none;
 }
 
