--- a/src/Components/Product/product.scss
+++ b/src/Components/Product/product.scss
@@ -4,7 +4,6 @@
   color: $pureBlack;
   font-size: 25px;
   display: grid;
-  background-size: cover;
   max-width: 100%;
   margin: 0 auto;
   @media (min-width: $mobileDevice) {
@@ -17,6 +16,9 @@
   position: relative;
   max-height: 100%;
   max-width: 100%;
+  aspect-ratio: 1/1;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .productCard__price {
