--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -69,6 +69,23 @@
   }
 }
 
+.navigation__wrapper {
+  position: relative;
+}
+
+.navigation__dropdown {
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  transform: translate(0, 40px);
+  background-color: #fff;
+  position: absolute;
+  height: 500px;
+  width: 100%;
+  border: 1px black solid;
+  z-index: 1;
+}
+
 .navigation__search-input {
   border: none;
   border-bottom: 1px solid $pureBlack;
