added a way to render goods with working links, still got issues to fix

--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -79,8 +79,7 @@
   grid-template-columns: repeat(3, 1fr);
   transform: translate(0, 40px);
   background-color: #fff;
-  position: absolute;
-  height: 500px;
+  //position: absolute;
   width: 100%;
   border: 1px black solid;
   z-index: 1;
