--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -77,10 +77,13 @@
   display: grid;
   grid-template-rows: repeat(3, 1fr);
   grid-template-columns: repeat(3, 1fr);
-  transform: translate(0, 40px);
   background-color: #fff;
-  //position: absolute;
-  width: 100%;
+  position: absolute;
+  max-width: 400px;
+  max-height: 400px;
+  margin: 0 auto;
+  top: 100px;
+  right: 0;
   border: 1px black solid;
   z-index: 1;
 }
