--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -75,17 +75,41 @@
 
 .navigation__dropdown {
   display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  grid-template-columns: repeat(3, 1fr);
-  background-color: #fff;
+  grid-template-rows: repeat(auto-fit, 100px);
+  grid-template-columns: repeat(auto-fit, 100px);
+  background-color: $pureBlack;
   position: absolute;
-  max-width: 400px;
-  max-height: 400px;
-  margin: 0 auto;
+  max-width: 700px;
+  max-height: 500px;
+  margin-left: 30%;
   top: 100px;
-  right: 0;
   border: 1px black solid;
   z-index: 1;
+  // align-self: center;
+  // align-items: center;
+}
+
+.navigation__PreviewUrl {
+  display: block;
+  aspect-ratio: 1/1;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.navigation__details {
+  max-height: 35px;
+  font-size: 12px;
+  line-height: 12px;
+  border: none;
+  cursor: pointer;
+  background-color: $pureBlack;
+  padding: 10px;
+  width: 100%;
+}
+
+.navigation__link {
+  text-decoration: none;
+  color: $pureWhite;
 }
 
 .navigation__search-input {
