--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -75,9 +75,10 @@
 
 .navigation__dropdown {
   display: grid;
-  grid-template-rows: repeat(auto-fit, 100px);
-  grid-template-columns: repeat(auto-fit, 100px);
-  background-color: $pureBlack;
+  grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+  grid-gap: 10px;
+  background-color: $pureWhite;
   position: absolute;
   max-width: 700px;
   max-height: 500px;
@@ -90,7 +91,9 @@
 }
 
 .navigation__PreviewUrl {
-  display: block;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
   aspect-ratio: 1/1;
   background-repeat: no-repeat;
   background-size: cover;
@@ -108,6 +111,9 @@
 }
 
 .navigation__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-decoration: none;
   color: $pureWhite;
 }
