--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -77,45 +77,45 @@
   display: grid;
   grid-template-rows: repeat(auto-fit, minmax(100px, 1fr));
   grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
-  grid-gap: 10px;
   background-color: $pureWhite;
   position: absolute;
-  max-width: 700px;
+  max-width: 50%;
   max-height: 500px;
-  margin-left: 30%;
+  margin-left: 25%;
   top: 100px;
-  border: 1px black solid;
+  border: 1px $pureWhite solid;
   z-index: 1;
-  // align-self: center;
-  // align-items: center;
 }
 
-.navigation__PreviewUrl {
+.navigation__card-preview {
   display: flex;
   justify-content: center;
   align-items: flex-end;
   aspect-ratio: 1/1;
   background-repeat: no-repeat;
   background-size: cover;
+  margin: 5px;
 }
 
 .navigation__details {
-  max-height: 35px;
+  min-height: 35px;
   font-size: 12px;
   line-height: 12px;
   border: none;
   cursor: pointer;
   background-color: $pureBlack;
-  padding: 10px;
   width: 100%;
+  padding: 0;
 }
 
 .navigation__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   text-decoration: none;
   color: $pureWhite;
+  display: flex;
+  width: 100%;
+  min-height: 35px;
+  justify-content: center;
+  align-items: center;
 }
 
 .navigation__search-input {
