--- a/src/Components/Navigation/navigation.scss
+++ b/src/Components/Navigation/navigation.scss
@@ -292,8 +292,10 @@
   color: $productCardDiscount;
   font-size: 24px;
   min-width: 20px;
-  display: flex;
-  justify-content: flex-end;
+  @media (min-width: $desktopDevice) {
+    display: flex;
+    justify-content: flex-end;
+  }
 }
 
 .app__link-desktop__cart:before {
