--- a/src/Components/ShoppingCart/shoppingCart.scss
+++ b/src/Components/ShoppingCart/shoppingCart.scss
@@ -3,27 +3,33 @@
 .shopping-card {
     display: grid;
     grid-template-rows: 1fr;
-    
+    border-bottom: 1px $pureBlack solid;
     @media (min-width: $mobileDevice)  {
         max-width: $mobileDevice;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(6, minmax(50px, 1fr));
+        grid-template-rows: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
         padding: 30px 20px 30px 20px;
-        margin: 0 auto;
-        max-height: $mobileDevice;
         text-align: center;
+        grid-gap: 10px;
     }
 
     @media (min-width: $largeDesktopDevice) {
         grid-template-columns: 0.1fr 0.3fr 0.2fr 0.2fr 0.2fr 0.1fr;
+        grid-template-rows: none;
         max-width: $largeDesktopDevice;
         margin:  30px 100px 0 100px;
         padding-bottom: 30px;
-        border-bottom: 1px black solid;
+        grid-gap: 0;
     }
 }
 
 .shopping-card__img {
+
+    @media (min-width: $mobileDevice)  {
+        margin: 0;
+        align-items: center;
+        justify-content: center;
+    }
     max-width: 100%;
     max-height: 100%;
     background-size: cover;
@@ -57,13 +63,17 @@
 }
 
 .shopping-card__select {
-    min-width: 197px;
-    max-height: 60px;
-    border: 1px solid $pureBlack;
-    border-radius: 10px;
     font-size: 25px;
     cursor: pointer;
-    padding-left: 35px;
+    border-radius: 10px;
+    border: 1px solid $pureBlack;
+    max-width: 150px;
+
+    @media (min-width: $largeDesktopDevice)  {
+        min-width: 197px;
+        max-height: 60px;
+        padding-left: 35px;
+    }
 }
 
 .shopping-card__option {
@@ -81,16 +91,28 @@
 }
 
 .shopping-card__price-title {
-    text-align: center;
+    display: flex;
+    justify-content: center;
+    @media (min-width: $largeDesktopDevice)  {
+        text-align: center;
+    }
 }
 
 .shopping-card__quantity {
+    @media (min-width: $mobileDevice)  {
+        display: none;
+    }
+    @media (min-width: $largeDesktopDevice)  {
+        display: block;
+    }
     text-align: center;
     margin-bottom: 69px;
 }
 
 .shopping-card__label {
-    margin: 0 0 60px 0;
+    @media (min-width: $largeDesktopDevice)  {
+        margin: 0 0 60px 0;
+    }
 }
 
 .shopping-card__input {
@@ -147,9 +169,13 @@
 }
 
 .shopping-card__colors {
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr;
+    display:  flex;
+    justify-content: center;
+    @media (min-width: $largeDesktopDevice)  {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr;
+    }
 }
 
 .shopping-card__price {
@@ -157,15 +183,19 @@
     font-weight: 800;
     line-height: 41px;
     color: $productCardPrice;
-    margin-top: 69px;
+    @media (min-width: $largeDesktopDevice)  {
+        margin-top: 69px;
+    }
 }
 
 .shopping-cart__title {
     width: 100%;
     text-align: center;
-    padding-bottom: 60px;
     margin: 0;
     line-height: 45px;
+    @media (min-width: $largeDesktopDevice)  {
+        padding-bottom: 60px;
+    }
 }
 
 .shopping-card__remove-item {
@@ -174,9 +204,12 @@
     border: none;
     background-color: $pureWhite;
     cursor: pointer;
-    width: 24px;
     height: 24px;
     padding: 0;
+    width: 100%;
+    @media (min-width: $largeDesktopDevice)  {
+        width: 24px;
+    }
 }
 
 .shopping-card__remove-item:after {
@@ -186,8 +219,22 @@
     height: 24px;
     background-repeat: no-repeat;
     background-image: url('./img/crest.svg');
-    top: 110px;
-    left: 85px;
+    @media (min-width: $largeDesktopDevice)  {
+        top: 110px;
+        left: 85px;
+    }
+}
+
+.shopping-cart {
+
+    @media (min-width: $mobileDevice)  {
+        padding-left: 100px;
+        padding-right: 100px;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(auto-fit, minmax(50px, 1fr));;
+    }
+    padding: 0;
 }
 
 .shopping-cart__price-calculation {
