--- a/src/App.scss
+++ b/src/App.scss
@@ -1,12 +1,14 @@
 // colors
-  $pureBlack: #000000;
-  $productCardSalesText: #78788C;
-  $productCardDiscount: #DF0000;
-  $productCardPrice: #29293E;
-  $pureWhite: #ffffff;
-  $singleCardText: #29293E;
-  $productCardDetails: #777888;
-  $menuBackground: #E0EBED;
+$pureBlack: #000000;
+$productCardSalesText: #78788C;
+$productCardDiscount: #DF0000;
+$productCardPrice: #29293E;
+$pureWhite: #ffffff;
+$singleCardText: #29293E;
+$productCardDetails: #777888;
+$menuBackground: #E0EBED;
+$greyBackground: #E5E5E5;
+$greyBorder: #CACACA;
 
 // media queries
 $mobileDevice: 768px;
