--- a/src/Components/Pagination/pagination.scss
+++ b/src/Components/Pagination/pagination.scss
@@ -1,6 +1,41 @@
+@import "src/App";
+
 .pagination-test {
-    display: flex;
+    display: grid;
     width: 100%;
-    flex-wrap: wrap;
-    flex-direction: row;
+    grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    padding: 20px;
+}
+
+.pagination-test-controls,
+.pagination-test-buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.pagination-test-buttons {
+    display: grid;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 50px;
+}
+
+.pagination-test-button {
+    font-size: 22px;
+    border: 1px solid $pureBlack;
+    border-radius: 10px;
+    background-color: $pureWhite;
+    padding: 15px;
+}
+
+.pagination-test-current-page {
+    font-size: 22px;
+    display: grid;
+    grid-template-rows: 1fr;
+    width: 100%;
+    text-align: center;
+    padding: 30px;
 }
