landing page - 5th block with products rotation through timer

--- a/src/App.scss
+++ b/src/App.scss
@@ -9,6 +9,8 @@ $productCardDetails: #777888;
 $menuBackground: #E0EBED;
 $greyBackground: #E5E5E5;
 $greyBorder: #CACACA;
+$pureBlue: #618DFF;
+$darkBlue: #4266E8;
 
 // media queries
 $mobileDevice: 768px;
