--- a/src/Components/WishList/wishlist.scss
+++ b/src/Components/WishList/wishlist.scss
@@ -10,6 +10,8 @@
 .wishlist__header {
     width: 100%;
     text-align: center;
+    margin: 0;
+    line-height: 45px;
 }
 
 .wishlist__remove-button {
