--- a/src/Components/Landing/ShowRoom/showroom.scss
+++ b/src/Components/Landing/ShowRoom/showroom.scss
@@ -4,3 +4,13 @@
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   padding: 20px;
 }
+
+.showroom__header {
+  display: flex;
+  justify-content: flex-start;
+  padding: 20px;
+  font-size: 40px;
+  line-height: 40px;
+  font-weight: 800;
+  margin: 0;
+}
