fixed mobile layout (480px);

--- a/src/App.scss
+++ b/src/App.scss
@@ -13,8 +13,9 @@ $pureBlue: #618DFF;
 $darkBlue: #4266E8;
 
 // media queries
-$mobileDevice: 768px;
-$tabletDevice: 992px;
+$mobileDevice: 480px;
+$tabletDevice: 768px;
+$largeTabletDevice: 992px;
 $desktopDevice: 1024px;
 $largeDesktopDevice: 1440px;
 
