--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -10,8 +10,11 @@
   display: grid;
   grid-gap: 20px;
   padding: 50px 20px 20px 20px;
+  @media (min-width: $mobileDevice) {
+    grid-template-columns: 1fr;
+  }
 
-  @media (min-width: $tabletDevice) {
+  @media (min-width: $largeTabletDevice) {
     grid-template-columns: 1fr 2fr;
   }
 
@@ -30,8 +33,8 @@
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 20px;
 
-  @media (min-width: $tabletDevice) {
-    max-width: $tabletDevice;
+  @media (min-width: $largeTabletDevice) {
+    max-width: $largeTabletDevice;
     grid-template-columns: repeat(4, 1fr);
   }
 
@@ -103,7 +106,7 @@
   margin: 0;
   padding: 20px;
 
-  @media (min-width: $tabletDevice) {
+  @media (min-width: $largeTabletDevice) {
     grid-template-columns: repeat(4, 1fr);
   }
 
@@ -120,7 +123,7 @@
 .footer-underline__item:nth-child(1) {
     grid-row: 3;
     grid-column: 1 / span 2;
-  @media (min-width: $tabletDevice) {
+  @media (min-width: $largeTabletDevice) {
     grid-row: 2;
     grid-column: 1 / span 4;
   }
