--- a/src/Components/Landing/landing.scss
+++ b/src/Components/Landing/landing.scss
@@ -9,6 +9,10 @@
     min-height: $tabletDevice;
   }
 
+  @media (min-width: $largeTabletDevice) {
+    min-height: $largeTabletDevice;
+  }
+
   @media (min-width: $desktopDevice) {
     min-height: $desktopDevice;
   }
@@ -39,7 +43,7 @@
 .landing__header {
   display: grid;
   margin: 0 auto;
-  @media (min-width: $mobileDevice) {
+  @media (min-width: $tabletDevice) {
     width: 100%;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 1fr;
@@ -52,11 +56,13 @@
 
 .landing__header-img {
   background-image: url('img/landingHeader.png');
+
   @media (min-width: $mobileDevice) {
     background-repeat: no-repeat;
     background-size: cover;
-    aspect-ratio: 1.1/1;
+    aspect-ratio: 1/1;
   }
+
   @media (min-width: $desktopDevice) {
     aspect-ratio: auto;
   }
@@ -64,6 +70,10 @@
 
 .landing__header-motto {
   @media (min-width: $mobileDevice) {
+    margin: 0 20px 0 20px;
+  }
+
+  @media (min-width: $tabletDevice) {
     margin: 0 40px 0 40px;
   }
   @media (min-width: $desktopDevice) {
@@ -73,6 +83,12 @@
 
 .landing__header-heading {
   @media (min-width: $mobileDevice) {
+    font-size: 30px;
+    line-height: 30px;
+    font-weight: 800;
+  }
+
+  @media (min-width: $tabletDevice) {
     font-size: 34px;
     line-height: 34px;
     font-weight: 800;
@@ -86,8 +102,13 @@
 
 .landing__header-description {
   @media (min-width: $mobileDevice) {
-    margin: 0 0 25px 0;
     font-size: 16px;
+    line-height: 25px;
+  }
+
+  @media (min-width: $tabletDevice) {
+    margin: 0 0 25px 0;
+    font-size: 20px;
     line-height: 25px;
   }
   @media (min-width: $desktopDevice) {
@@ -98,15 +119,13 @@
 
 .landing__header-buttons {
   @media (min-width: $mobileDevice) {
-    max-width: $mobileDevice;
     display: grid;
     grid-template-rows: 1fr 1fr;
-    margin: 0 auto 0 auto;
+    padding: 0 20px 0 20px;
     grid-gap: 15px;
-    padding-bottom: 40px;
   }
-  @media (min-width: $tabletDevice) {
-  max-width: $tabletDevice;
+  @media (min-width: $largeTabletDevice) {
+  max-width: $largeTabletDevice;
   }
   @media (min-width: $desktopDevice) {
     max-width: $desktopDevice / 2;
@@ -130,17 +149,20 @@
 
 .landing__header-button {
   text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @media (min-width: $mobileDevice) {
-    display: flex;
-    min-width: 700px;
-    align-items: center;
-    justify-content: center;
-    font-size: 16px;
     line-height: 22px;
     font-weight: 600;
+    font-size: 16px;
     border-radius: 10px;
     color: $pureBlack;
     border: 1px solid $pureBlack;
+    padding: 15px;
+  }
+
+  @media (min-width: $tabletDevice) {
   }
   @media (min-width: $desktopDevice) {
     min-width: 200px;
