--- a/src/Components/Pagination/pagination.scss
+++ b/src/Components/Pagination/pagination.scss
@@ -15,7 +15,7 @@
     background-repeat: no-repeat;
     position: relative;
     display: grid;
-    @media (min-width: $mobileDevice) {
+    @media (min-width: $tabletDevice) {
         min-height: 700px;
     }
 
