--- a/src/Components/WishList/wishlist.scss
+++ b/src/Components/WishList/wishlist.scss
@@ -32,14 +32,14 @@
 .wishlist__card-wrapper {
     display: grid;
     padding-bottom: 30px;
-    @media (min-width: $mobileDevice) {
-        max-width: $mobileDevice;
+    @media (min-width: $tabletDevice) {
+        max-width: $tabletDevice;
         margin: 0 auto;
         grid-template-columns: 1fr;
         grid-gap: 30px;
     }
-    @media (min-width: $tabletDevice) {
-        max-width: $tabletDevice;
+    @media (min-width: $largeTabletDevice) {
+        max-width: $largeTabletDevice;
         grid-template-columns: repeat(2, 1fr);
         margin: 0 auto;
     }
